Taylor Rydahl updates to lambda calculus AV and exercises

--- a/Exercises/Development/AlphaConversionHighlight.html
+++ b/Exercises/Development/AlphaConversionHighlight.html
@@ -28,7 +28,12 @@
 			<div class="solution" data-type="custom">
 				<div class="guess">true</div>
 				<div class="validator-function">if(validate_alpha_Answer()) return true;</div></div>
-			<div class="hints"><p><var>CorrectAnswer</var></p></div>
+			<!-- Display the correct answer as a hint. Used for debugging. -->
+			<!-- <div class="hints"><p><var>CorrectAnswer</var></p></div> -->
+			<div class="hints">
+				<p>When do you need to &#945;-convert a variable?</p>
+				<p>Which variables would become bound after a &#946;-reduction?<p>
+				<p>Which variables are already bound?</p>
 		</div> 
 	</div>
 </div>
