--- a/Exercises/Development/BetaReductionNormNextStep.html
+++ b/Exercises/Development/BetaReductionNormNextStep.html
@@ -26,7 +26,13 @@
 				<div id="jsav"></div>
 			</div>
 			<div class="solution" data-type="text"><var>CorrectAnswer</var></div>
-			<div class="hints"><p><var>CorrectAnswer</var></p></div>
+			<!-- Display the correct answer as a hint. Used for debugging. -->
+			<!-- <div class="hints"><p><var>CorrectAnswer</var></p></div> -->
+			<div class="hints">
+				<p>Identify the argument and lambda expression to be reduced.</p>
+				<p>Remember that with Normal-Order, you are starting with the outermost expression.</p>
+				<p>Replace all instances of the lambda variable within the expression with the argument.</p>
+			</div>
 		</div> 
 	</div>
 </div>
