--- a/Exercises/Development/BetaReductionAppHighlight.html
+++ b/Exercises/Development/BetaReductionAppHighlight.html
@@ -22,14 +22,20 @@
 	<div class="problems">
 		<div>
 			<div class="question"><p>This exercise will test your understanding of applicative-order &#946;-reduction techniques.
-				First, from left-to-right, identify parameter that will be substituted in during reduction. Then, from left-to-right,
+				First, from left-to-right, identify the parameter that will be substituted in during reduction. Then, from left-to-right,
 				identify all instances of the appropriate variable that the parameter will replace.</p>
 				<div id="jsav"></div>
 			</div>
 			<div class="solution" data-type="custom">
 				<div class="guess">true</div>
 				<div class="validator-function">if(validate_beta_Answer()) return true;</div></div>
-			<div class="hints"><p><var>CorrectAnswer</var></p></div>
+			<!-- Display the correct answer as a hint. Used for debugging. -->
+			<!-- <div class="hints"><p><var>CorrectAnswer</var></p></div> -->
+			<div class="hints">
+				<p>What is the argument being passed into the lambda function?</p>
+				<p>What variable will it be substituted in for?<p>
+				<p>How does &#946;-reduction change the lambda function?</p>
+			</div>
 		</div> 
 	</div>
 </div>
