--- a/Exercises/RecurTutor2/BinaryTreeClctNrtrnSumm.html
+++ b/Exercises/RecurTutor2/BinaryTreeClctNrtrnSumm.html
@@ -11,7 +11,7 @@
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
 </head>
 
-<body data-height="580" data-width="1000">
+<body data-height="880" data-width="1000">
   <div class="exercise" data-name="btLeafPROG"></div>
   <div class="exercise" data-name="btDepthPROG"></div>
   <div class="exercise" data-name="btCheckValPROG"></div>
@@ -19,7 +19,7 @@
   <div class="exercise" data-name="btSumAllPROG"></div>
   <div class="exercise" data-name="bthasPathSumPROG"></div>
   <div class="exercise" data-name="btgetDiffPROG"></div>
-  
+   <div class="exercise" data-name="btDiameterPROG"></div>
   
 </body>
 </html>
