--- a/Exercises/RecurTutor2/BinaryTreeClctNrtrnSumm.html
+++ b/Exercises/RecurTutor2/BinaryTreeClctNrtrnSumm.html
@@ -19,7 +19,8 @@
   <div class="exercise" data-name="btSumAllPROG"></div>
   <div class="exercise" data-name="bthasPathSumPROG"></div>
   <div class="exercise" data-name="btgetDiffPROG"></div>
-   <div class="exercise" data-name="btDiameterPROG"></div>
+  <div class="exercise" data-name="btDiameterPROG"></div>
+  <div class="exercise" data-name="btcheckSumPROG"></div>
   
 </body>
 </html>
