syncing with git , add circuitSAT and some exercises

--- a/Exercises/Development/3sat.html
+++ b/Exercises/Development/3sat.html
@@ -269,7 +269,7 @@ var ShowSolution = function(){
 
 <div class="exercise">
   <div class="vars">
-    <var id="literalcnt">randRange(4, 10)</var>
+    <var id="literalcnt">randRange(4,10)</var>
     <var id="clausecnt">randRange(6,12)</var>
     <var id="JSAV">initJSAV(clausecnt,literalcnt)</var>
   </div>
