--- a/AV/Development/circuitSAT.html
+++ b/AV/Development/circuitSAT.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NP-COMPLETE PROBLEMS</title>
+  <title>Satisfiability</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
@@ -16,7 +16,7 @@
         <input type="button" id="help" name="help" value="Help" />
       </td>
       <td class="headerCenter avTitle">
-       Clique 
+        Circuit Satisifiability
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
@@ -45,6 +45,8 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils.js"></script>
 <script src="../../lib/odsaAV.js"></script>
-<script src="3satToClique.js"></script>
+<script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script src="circuit/circuit.js"></script>
+<script src="circuitSAT.js"></script>
 </body>
 </html>
