Added Finnish translation to selectionSortPRO.

--- a/AV/Development/selectionSortPRO.html
+++ b/AV/Development/selectionSortPRO.html
@@ -12,12 +12,9 @@
 
 <body>
   <div id="jsavcontainer">
-    <h1>Selection Sort</h1>
-    <!-- <a class="jsavsettings" href="#">Settings</a> -->
-    <p class="instructLabel">Instructions:</p>
-    <p class="instructions">
-      Use Selection Sort to sort the table given below in ascending order. Click on a bar to swap it with the highlighted bar. If you do not wish to swap, you can highlight the next bar by clicking on the currently highlighted bar.
-    </p>
+    <h1 class="exerciseTitle"></h1>
+    <p class="instructLabel"></p>
+    <p class="instructions"></p>
     <p align="center" class="jsavexercisecontrols"></p>
     <p class="jsavscore"></p>
   </div>
