Added Finnish translation to AVLinsertPRO

--- a/AV/Development/AVLinsertPRO.html
+++ b/AV/Development/AVLinsertPRO.html
@@ -19,6 +19,15 @@
     <p class="instructLabel"></p>
     <p class="instructions"></p>
     <p align="center" class="jsavexercisecontrols"></p>
+    <div class="jsavcanvas">
+      <div id="stackcontainer" style="margin: auto; padding: 15px"></div>
+      <div id="buttoncontainer" style="margin: auto; text-align: center; padding: 15px">
+        <button id="buttonL">Single Rotation Left</button>
+        <button id="buttonLR">Double Rotation LR</button>
+        <button id="buttonRL">Double Rotation RL</button>
+        <button id="buttonR">Single Rotation Right</button>
+      </div>
+    </div>
   </div>
 
   <script src="../../lib/jquery.min.js"></script>
