Changes to RecurTutor2 and one ex added

--- a/Exercises/RecurTutor2/bstMinPROG.html
+++ b/Exercises/RecurTutor2/bstMinPROG.html
@@ -25,15 +25,16 @@
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test">
-    Given a non-empty binary search tree (an ordered binary tree), return the minimum data value 
+    Given a non-empty binary search tree (an ordered binary tree), 
+    return the node that has the minimum value
     found in that tree. Note that it is not necessary to search the entire tree.
 	Add appropriate lines of code to the following function skeleton so that the function will 
-	recursively  find the mimimum value 
+	recursively  find the node that has the minimum value
 	in the binary search tree pointed at by "root". 
-	Assume that the given binary search tree will not be empty and has integer values.  <br />
+	 <br />
 
     <textarea  id="codeTextarea">
-int bstMin(BinNode root) {
+BinNode bstMin(BinNode root) {
   // Your code goes between these lines
 
 
