A new prog exercise added to RecurTutor2

--- a/Exercises/RecurTutor2/BinaryTreeGuidedSumm.html
+++ b/Exercises/RecurTutor2/BinaryTreeGuidedSumm.html
@@ -12,7 +12,7 @@
 </head>
 
 <body data-height="580" data-width="1000">
- 
+  <div class="exercise" data-name="bstMinPROG"></div>
   <div class="exercise" data-name="bstsmallCountPROG"></div>
 </body>
 </html>
