Latest edits to lambda calculus by Taylor Rydahl

--- a/Exercises/Development/AlphaConversionChoice.html
+++ b/Exercises/Development/AlphaConversionChoice.html
@@ -25,7 +25,7 @@
 	</div>
 	<div class="problems">
 		<div>
-			<div class="question"><p>What of the following is a correct result of alpha-conversion on the following
+			<div class="question"><p>Which of the following is a correct result of alpha-conversion on the following
 				lambda calculus expression?</p>
 				<div id="jsav"></div>
 			</div>
