--- a/Exercises/Development/AlphaConversionHighlight.html
+++ b/Exercises/Development/AlphaConversionHighlight.html
@@ -22,7 +22,8 @@
 	<div class="problems">
 		<div>
 			<div class="question"><p>This exercise will test your understanding of free and bound variables.
-				Click on all of the variables that will need to be &#945;-converted in this expression.</p>
+				Click on all of the variables that will need to be &#945;-converted in this expression before
+				it can be properly &#946;-reduced.</p>
 				<div id="jsav"></div>
 			</div>
 			<div class="solution" data-type="custom">
