Minor Modifications to RecurTutor2 Exs

--- a/Exercises/RecurTutor2/btDepthPROG.html
+++ b/Exercises/RecurTutor2/btDepthPROG.html
@@ -23,7 +23,7 @@
   
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">Add appropriate lines of code to the following function skeleton so that the function will recursively find the depth of the binary tree pointed at by "root".  <br />
+      <p class="problem" id = "test"> The depth of a binary tree is the maximum length of all paths. Add appropriate lines of code to the following function skeleton so that the function will recursively find the depth of the binary tree pointed at by "root".  <br />
 
     <textarea  id="codeTextarea">
 int btDepth(BinNode root) {
