--- a/Exercises/RecurTutor2/btDiameterPROG.html
+++ b/Exercises/RecurTutor2/btDiameterPROG.html
@@ -39,7 +39,7 @@ recursively find the diameter of the binary tree pointed at by "root".
 Note: you have to use the given height function without any changes.<br />
 
     <textarea  id="codeTextarea">
-int btDiameter(BSTNode root)
+int btDiameter(BinNode root)
 {
   // Your code goes between these lines
 
@@ -52,7 +52,7 @@ int btDiameter(BSTNode root)
 
 }
 
-public static int height(BSTNode root)
+public static int height(BinNode root)
 {
   if(root== null)
     return 0;
