--- a/Exercises/RecurTutor2/btcheckSumPROG.html
+++ b/Exercises/RecurTutor2/btcheckSumPROG.html
@@ -32,7 +32,7 @@ Add appropriate lines of code to the following function skeleton so that the fun
 recursively check if tree satisfies the property of children sum on the binary tree pointed at by "root".  <br />
 
     <textarea  id="codeTextarea">
-boolean btcheckSum(BSTNode root)
+boolean btcheckSum(BinNode root)
 {
   // Your code goes between these lines
 
