--- a/AV/Development/3sat.html
+++ b/AV/Development/3sat.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Circuit Satisfiability</title>
+  <title>Satisfiability</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-  <link rel="stylesheet" href="test.css" type="text/css" />
+  <link rel="stylesheet" href="3sat.css" type="text/css" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <input type="button" id="help" name="help" value="Help" />
       </td>
       <td class="headerCenter avTitle">
-        Circuit Satisifiability
+        3-SAT
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
@@ -46,7 +46,6 @@
 <script src="../../lib/odsaUtils.js"></script>
 <script src="../../lib/odsaAV.js"></script>
 <script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-<script src="circuit/circuit.js"></script>
-<script src="circuitSAT.js"></script>
+<script src="3sat.js"></script>
 </body>
 </html>
