--- a/Exercises/Development/BetaReductionAppNextStep.html
+++ b/Exercises/Development/BetaReductionAppNextStep.html
@@ -12,7 +12,7 @@
 	<script src="LambdaExercises.js"></script>
 </head>
 
-<body>
+<body data-height="650" data-width="950">
 <div class="exercise">
 	<div class="vars">
 		<var id="JSAV">init_app()</var>
