--- a/Exercises/Development/LambdaCalcFree.html
+++ b/Exercises/Development/LambdaCalcFree.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
 
-<body>
+<body data-height="650" data-width="950">
 <script src="LambdaExercises.js"></script>
 
 <div class="exercise">
