--- a/AV/Binary/heapinsertPRO.html
+++ b/AV/Binary/heapinsertPRO.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Heap Insert Proficiency Exercise</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
@@ -16,7 +17,7 @@
           <p class="jsavexercisecontrols"></p>
         </td>
         <td class="headerRight">
-          <input id="about" type="button" name="about" />
+          <input id="about" type="button" name="about" value="About" />
           <a id="settings" class="jsavsettings" href="#"></a>
         </td>
       </tr>
@@ -25,7 +26,7 @@
       <p class="instructLabel"></p>
       <p class="instructions">
       </p>
-      <p align="center">
+      <p style="text-align: center">
         <span class="jsavscore"></span>
       </p>
 
