--- a/AV/Sorting/heapsortPRO.html
+++ b/AV/Sorting/heapsortPRO.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>Heapsort</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
@@ -13,13 +14,13 @@
       <table class="proHeaderTable">
         <tr>
           <td class="headerLeft">
-            <input id="help" type="button" name="help" />
+            <input id="help" type="button" name="help" value="Help"/>
           </td>
           <td class="headerCenter">
             <p class="jsavexercisecontrols"></p>
           </td>
           <td class="headerRight">
-            <input id="about" type="button" name="about" />
+            <input id="about" type="button" name="about" value="About" />
             <a id="settings" class="jsavsettings" href="#"></a>
           </td>
         </tr>
@@ -30,7 +31,7 @@
           <p class="instructions">
           </p>
           <p id="procontrols">
-            <input id="decrement" type="button" />
+            <input id="decrement" type="button" value="Decrement heap size" />
             <span class="jsavscore"></span>
           </p>
         </div>
