--- a/AV/Development/interpolationSearchPRO.html
+++ b/AV/Development/interpolationSearchPRO.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+  <meta charset="utf-8">
   <title>Interpolation Search</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
@@ -16,8 +16,11 @@
       max-height: 250px !important;
     }
     .jsavcanvas svg {
-      z-index: 101;
+      /*z-index: 101;*/
       height: 262px;
+    }
+    .jsavhighlight {
+      background-color: #fe7 !important;
     }
     /* bar array */
     .jsavbararray .jsavnode {
@@ -77,11 +80,11 @@
     <h1 class="exerciseTitle"></h1>
     <p class="instructLabel"></p>
     <p class="instructions"></p>
-    <p align="center" class="jsavexercisecontrols"></p>
+    <p class="jsavexercisecontrols"></p>
     <p class="jsavoutput jsavline"></p>
     <div class="jsavcanvas"></div>
     <form class="returnbox">
-      <span id="returnlabel"></span><input id="returninput" type="number" value="0" style="width: 50px"></input>&nbsp;<input type="submit" id="returnbutton"></input>&nbsp;<span id="returndone" style="visibility: hidden;"></span>
+      <span id="returnlabel"></span><input id="returninput" type="number" value="0" style="width: 50px">&nbsp;<input type="submit" id="returnbutton">&nbsp;<span id="returndone" style="visibility: hidden;"></span>
     </form>
   </div>
 
