Almost finished alternative version of interpolation search

--- a/AV/Development/interpolationSearchPRO.html
+++ b/AV/Development/interpolationSearchPRO.html
@@ -12,17 +12,20 @@
       height: auto;
     }
     .jsavcanvas {
-      height: 250px !important;
-      max-height: 250px !important;
+      height: 302px !important;
+      max-height: 302px !important;
     }
     .jsavcanvas svg {
       /*z-index: 101;*/
-      height: 262px;
+      height: 302px;
     }
     .jsavhighlight {
       background-color: #fe7 !important;
     }
     /* bar array */
+    .jsavbararray {
+      padding-bottom: 70px;
+    }
     .jsavbararray .jsavnode {
       width: 25px;
     }
@@ -62,7 +65,7 @@
     .returnbox {
       width: 400px;
       text-align: center;
-      margin: 50px auto;
+      margin: 10px auto;
       padding: 10px;
       border: 1px solid #555;
       background-color: #ddd;
