--- a/AV/Development/interpolationSearchPRO2.html
+++ b/AV/Development/interpolationSearchPRO2.html
@@ -98,6 +98,6 @@
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <script src="../../lib/odsaUtils-min.js"></script>
   <script src="../../lib/odsaAV-min.js"></script>
-  <script src="interpolationSearchPRO.js"></script>
+  <script src="interpolationSearchPRO2.js"></script>
 </body>
 </html>
