--- a/AV/Development/3satToClique.html
+++ b/AV/Development/3satToClique.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NP-COMPLETE PROBLEMS</title>
+  <title>Reduction of 3-SAT to Clique</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
@@ -16,7 +16,7 @@
         <input type="button" id="help" name="help" value="Help" />
       </td>
       <td class="headerCenter avTitle">
-       Clique 
+       Reduction of 3-SAT to Clique 
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
