--- a/AV/Development/3satToHC.html
+++ b/AV/Development/3satToHC.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hamiltonian Circuit</title>
+  <title>3sat to Hamiltonian Cycle reduction</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
@@ -17,7 +17,7 @@
         <input type="button" id="help" name="help" value="Help" />
       </td>
       <td class="headerCenter avTitle">
-       Hamiltonian Circuit
+       Reduction of 3-SAT to Hamiltonian Cycle.
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
