--- a/AV/Development/circuitSATtoSat.html
+++ b/AV/Development/circuitSATtoSat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Circuit Satisfiability</title>
+  <title>Circuit-SAT to SAT Reduction</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
