--- a/AV/Development/cliqueToIS.html
+++ b/AV/Development/cliqueToIS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NP-COMPLETE PROBLEMS</title>
+  <title>Clique to Independnet Set Reduction</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
