Inroduction and reduction for TSP--first check in

--- a/AV/Development/HCtoTSP.html
+++ b/AV/Development/HCtoTSP.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Independent Set Problem</title>
+  <title>Hamiltonian Cycle to Traveling Salesman Reduction</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-  <link rel="stylesheet" href="IS.css" type="text/css" />
+  <link rel="stylesheet" href="HCtoTSP.css" type="text/css" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <input type="button" id="help" name="help" value="Help" />
       </td>
       <td class="headerCenter avTitle">
-        Independent Set Problem
+        Reduction of Hamiltonian Cycle to Traveling Salesman Problem
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
@@ -45,6 +45,7 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils.js"></script>
 <script src="../../lib/odsaAV.js"></script>
-<script src="IS.js"></script>
+<script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script src="HCtoTSP.js"></script>
 </body>
 </html>
