last round (hopefully) of changes to lambda calculus material before using it next week

--- a/Exercises/Development/BetaReductionAppNextStep.html
+++ b/Exercises/Development/BetaReductionAppNextStep.html
@@ -24,7 +24,7 @@
 				one applicative-order beta-reduction? (Use ^ to express &#955;) </p>
 				<div id="jsav"></div>
 			</div>
-			<div class="solution" data-type="text"><var>CorrectAnswer</var></div>
+			<div class="solution" data-type="regex"><var>^CorrectAnswer$</var></div>
 			<!-- Display the correct answer as a hint. Used for debugging. -->
 			<!-- <div class="hints"><p><var>CorrectAnswer</var></p></div> -->
 			<div class="hints">
