--- a/Exercises/Development/BetaReductionNormNextStep.html
+++ b/Exercises/Development/BetaReductionNormNextStep.html
@@ -9,11 +9,10 @@
 	<script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 	<script src="../../JSAV/build/JSAV-min.js"></script>
 	<link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+	<script src="LambdaExercises.js"></script>
 </head>
 
 <body data-height="650" data-width="950">
-<script src="LambdaExercises.js"></script>
-
 <div class="exercise">
 	<div class="vars">
 		<var id="JSAV">init_norm()</var>
@@ -25,7 +24,7 @@
 				one normal-order beta-reduction? (Use ^ to express &#955;) </p>
 				<div id="jsav"></div>
 			</div>
-			<div class="solution" data-type="text"><var>CorrectAnswer</var></div>
+			<div class="solution" data-type="regex"><var>^CorrectAnswer$</var></div>
 			<!-- Display the correct answer as a hint. Used for debugging. -->
 			<!-- <div class="hints"><p><var>CorrectAnswer</var></p></div> -->
 			<div class="hints">
