Updates to TSP material

--- a/Exercises/Development/TSP.html
+++ b/Exercises/Development/TSP.html
@@ -219,7 +219,7 @@ var checkAnswer = function () {
   <div class="problems">
     <div> <!-- Supresses answer box -->
 
-      <p class="problem">Your task in this exercise is to find the shortest simple cycle.</p>
+      <p class="problem">Your task in this exercise is to find the shortest simple cycle that includes all nodes of the graph.</p>
       <div class="question">
         <p>Select the edges that can be a part of the shortest simple cycle.</p>
         <input id="reset" type="button" value="Reset" />	
