--- a/Exercises/Development/3sat.html
+++ b/Exercises/Development/3sat.html
@@ -21,6 +21,7 @@ var
   userInput,      // Boolean: Tells us if user ever did anything
   assigned=[],
   correctassignment=[],
+  Solution,
   answer;
 var clauses,mapping,labels,literals,clausecnt,literalcnt;
 // Click event handler on the array
@@ -212,8 +213,7 @@ var initJSAV = function (cntc,cntl) {
 
 
   jsavArr = jsav.ds.array(literals, {indexed: false});
-
-
+  Solution=ShowSolution();
   jsavArr.click(clickHandler);
   // Set up handler for reset button
   $("#reset").click(function () { f_reset(); });
@@ -250,18 +250,17 @@ var checkAnswer = function () {
 var ShowSolution = function(){
 	if(generateAnswer()==0)
 		return "The expression is not satisfiable";
+        var str="A satisfying assignment : ";
 	for(var i=0;i<literalcnt;i++){
     		if(correctassignment[i]==1){
-        		jsavArr.css(i,{"background-color":"green"});
+        		str+="x"+(i+1)+" = T ";
     		}
     		else if(correctassignment[i]==-1){
-        		jsavArr.css(i,{"background-color":"red"});
+        		str+="x"+(i+1)+" = F ";
     		}
-    		else if(correctassignment[i]==0){
-        		jsavArr.css(i,{"background-color":"white"});
-    		}
+    	        	
 	}
-	return "The expression is satisfiable with the above assignment";
+	return str;
 }
 
 
@@ -296,7 +295,8 @@ var ShowSolution = function(){
       </div>
       <div class="hints">
         <p>Click on the variable once to assign it true , twice to assign it false.</p> 
-      </div>
+        <p><var>[Solution]</var></p> 
+     </div>
     </div>
   </div>
 </div>
